@@ -138,7 +138,15 @@ int event_do_events(void)
       ui_event();
       break;
 
-    case EVENT_TYPE_INTERRUPT: z80_interrupt(); break;
+    case EVENT_TYPE_INTERRUPT:
+      /* Retriggered interrupt; firstly, ignore if we're doing RZX playback
+	 as all interrupts are generated by the RZX code */
+      if( rzx_playback ) break;
+      /* Otherwise, see if we actually accept an interrupt. If we do and
+	 we're doing RZX recording, store a frame */
+      if( z80_interrupt() ) rzx_frame();
+      break;
+
     case EVENT_TYPE_LINE: display_line(); break;
     case EVENT_TYPE_NMI: z80_nmi(); break;
     case EVENT_TYPE_NULL: /* Do nothing */ break;
